# My_Projects

./: Employee Payroll Management System.py  Mesh_Management_System.c  README.md  Stock_Management_System.c  generateLanguages.js  index.html
Amazon_Clone/: Amazon_Clone.html  Clone.css
Autonomous_Meeting_Scheduler/: README.md
Autonomous_Meeting_Scheduler/backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Autonomous_Meeting_Scheduler/backend/app/: main.py
Autonomous_Meeting_Scheduler/backend/app/agents/: brief_generator.py  classifier.py  extraction.py  transcription.py
Autonomous_Meeting_Scheduler/backend/app/api/: routes.py
Autonomous_Meeting_Scheduler/backend/app/core/: config.py
Autonomous_Meeting_Scheduler/backend/app/google/: calendar_api.py  gmail_api.py  oauth.py
Autonomous_Meeting_Scheduler/backend/app/langgraph/: graph.py
Autonomous_Meeting_Scheduler/backend/app/pollers/: gmail_poller.py
Autonomous_Meeting_Scheduler/backend/data/: sample_transcript.txt
Autonomous_Meeting_Scheduler/backend/tests/: test_slot_negotiator.py
Autonomous_Meeting_Scheduler/docs/: PROJECT_DOCUMENT_DAY1.md
Autonomous_Meeting_Scheduler/frontend/: package-lock.json  package.json
MY_PROJECTS/: MedicalstoreSystem.c
SkillBite/Main/: clean_theme.js  clean_theme2.js  generateLanguages.js  index.html  styles.css  update_react_theme.js  update_theme.js
SkillBite/frontend/: b.txt  eslint_report.json  lint-utf8.json  (+1 more)
Viedio_Conferencing/: README.md
backend/: Dockerfile  mvnw.cmd  pom.xml  skillbitedb.mv.db
frontend/: .env.production
(+70 files in other folders)
